--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,17 @@ footer a {
     color: goldenrod;
 }
 
+.flex-item {
+    background-color: hotpink;
+    flex: 1;
+    margin: 1em auto;
+}
+
+.section-item {
+    margin: 0 auto;
+    width: 100%;
+}
+
 .img-hero {
     width: 100%;
     height: auto;
