--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,30 @@ h1 {
     text-transform: uppercase;
     text-align: center;
     color: royalblue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .flex-container {
     display: flex;
     width: 100%;
     background-color: #fae8d7;
+}
+
+.flex-item {
+    background-color: hotpink;
+    flex: 1;
+    margin: 1em;
+}
+
+.section-item {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.img-hero {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 main {
@@ -62,21 +80,4 @@ footer {
 
 footer a {
     color: goldenrod;
-}
-
-.flex-item {
-    background-color: hotpink;
-    flex: 1;
-    margin: 1em auto;
-}
-
-.section-item {
-    margin: 0 auto;
-    width: 100%;
-}
-
-.img-hero {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
 }
